--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,4 @@ script:
         -DVSNRAY_ENABLE_EXAMPLES=ON
         -DVSNRAY_ENABLE_COMPILE_FAILURE_TESTS=ON
         -DVSNRAY_ENABLE_UNITTESTS=ON
-    - make VERBOSE=1
-    - ctest -E 'surface_.*_illegal_integral_2|vector._pack_illegal_integral|vector._unpack_illegal_integral'
-    - make install
+    - make VERBOSE=1 unittests
